nandu -- added dbconnection in repository package and edited application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+ server.port=9999
+spring.main.allow-circular-references=true
+jwt.secret=my$ecretKey
+driver.Class=oracle.jdbc.driver.OracleDriver
+db.name=nandu
+db.pwd=password
+db.url=jdbc:oracle:thin:@localhost:1521:ORCL
